# WyEDB

./: .gitignore  README.md  ods_reporter.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-windows.yml
assets/: README.md
docs/: ARCHITECTURE.md  EMPAQUETADO.md
packaging/: LEEME.txt  installer.iss  version_info.txt
src/ods_reporter/: __init__.py  main.py
src/ods_reporter/application/: __init__.py
src/ods_reporter/domain/: __init__.py  exceptions.py
src/ods_reporter/infrastructure/: __init__.py
src/ods_reporter/presentation/: __init__.py  app.py  branding.py  system_open.py  theme.py
src/ods_reporter/shared/: __init__.py  app_paths.py  constants.py  di_container.py  resources.py  result.py  text_utils.py
tests/: conftest.py
tests/integration/: test_by_professional_sections.py  test_cross_ods_validation.py  test_docx_processor_plan.py  test_docx_reader.py  test_docx_reader_templates.py  test_docx_writer.py  test_flexible_word_table.py  test_multi_template_excel.py  test_openpyxl_reader.py  test_other_activities.py  test_process_ods.py  test_professional_name_fallback.py  test_report_builder.py  test_word_to_word.py
tests/unit/: test_activity_matcher.py  test_activity_remapper.py  test_app_paths.py  test_content_normalizer.py  test_domain_entities.py  test_entregable_aligner.py  test_entregable_split_logic.py  test_excel_collection.py  test_main_view_model.py  test_ods_validator.py  test_professional_auditor.py  test_report_formatter.py  test_roman_numerals.py  test_text_utils.py
(+60 files in other folders)
